--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "porsonlee.com",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://oddporson.github.io",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -16,6 +17,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
