--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "porsonlee.com",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://www.porsonlee.com",
+  "homepage": "http://porsonlee.com",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
